Incorrect drawing of Circle/Axes/Cross on Particles when Display set to that AND Size/Vel/Num/Health also selected #29433

Closed
opened 2011-11-28 03:37:19 +01:00 by Mike Sloman · 7 comments

%%%The drawing of the Cross, Circle and Axes when using ParticleSettings.draw_method set to either of those is incorrect WHEN you have any of the Size/Health/Velocity/Number checkboxes set on.

The drawing of the circle/cross/axes scales up and down as you move the viewport. At a certain point these vanish (ie scaled to 0) and continue moving the view port they re-appear. However they are inverted but you can only tell when viewing the Axes option as it then draws the axes pointing in the opposite direction to the particle orientation. If you turn on the Velocity option (ParticleSettings.show_velocity) then you can see the axes change in orientation wrt. the velocity vector.

See attached blend file. Simply zoom in then out of observe the axes flip. Move the main view port and observe the axes decrease and change direction.

The shrinking of the cross/axes/circle is NOT present in 2.49. The shrinking is not that bad and aids the ability to adjust your view to get a clearer picture of the particle swarm without clutter and visualise the Health/Number information. However swapping axes direction is not right. I expect the two are related.

Possibly the issue is around line 3984 of function draw_new_particle_system() in file source/blender/editors/space_view3d/drawobject.c

%%%

%%%The drawing of the Cross, Circle and Axes when using ParticleSettings.draw_method set to either of those is incorrect WHEN you have any of the Size/Health/Velocity/Number checkboxes set on. The drawing of the circle/cross/axes scales up and down as you move the viewport. At a certain point these vanish (ie scaled to 0) and continue moving the view port they re-appear. However they are inverted but you can only tell when viewing the Axes option as it then draws the axes pointing in the opposite direction to the particle orientation. If you turn on the Velocity option (ParticleSettings.show_velocity) then you can see the axes change in orientation wrt. the velocity vector. See attached blend file. Simply zoom in then out of observe the axes flip. Move the main view port and observe the axes decrease and change direction. The shrinking of the cross/axes/circle is NOT present in 2.49. The shrinking is not that bad and aids the ability to adjust your view to get a clearer picture of the particle swarm without clutter and visualise the Health/Number information. However swapping axes direction is not right. I expect the two are related. Possibly the issue is around line 3984 of function draw_new_particle_system() in file source/blender/editors/space_view3d/drawobject.c %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%oh forgot to add ,

Built using customised scons and gcc 4.6.1.

Blender:


version 2.60 (sub 5), revision 42198M. Release
build date: 2011-11-28, 10:52:15
platform: Darwin:64bit

build cflags: -DPARALLEL=1 -DWITH_QUICKTIME -DUSE_QTKIT -DPARALLEL=1 -isysroot /Developer/SDKs/MacOSX10.6.sdk -mmacosx-version-min=10.6 -pipe -funsigned-char -fopenmp -DNDEBUG -O2 -ftree-vectorize -msse -msse2 -msse3 -mfpmath=sse -march=core2 -mssse3 -enable-threads -m64 -DGHOST_COCOA -DUSE_QTKIT -DWITH_MOD_FLUID -DWITH_MOD_OCEANSIM -D__LITTLE_ENDIAN__ -DWITH_AUDASPACE
build cxxflags: -isysroot /Developer/SDKs/MacOSX10.6.sdk -mmacosx-version-min=10.6 -pipe -funsigned-char -fopenmp -isysroot /Developer/SDKs/MacOSX10.6.sdk -mmacosx-version-min=10.6 -DNDEBUG -O2 -ftree-vectorize -msse -msse2 -msse3 -mfpmath=sse -march=core2 -mssse3 -enable-threads -m64 -DGHOST_COCOA -DUSE_QTKIT -DWITH_MOD_FLUID -DWITH_MOD_OCEANSIM -D__LITTLE_ENDIAN__ -DWITH_AUDASPACE
build linkflags: -mmacosx-version-min=10.6 -Wl -isysroot /Developer/SDKs/MacOSX10.6.sdk -fexceptions -framework CoreServices -framework Foundation -framework IOKit -framework AppKit -framework Cocoa -framework Carbon -framework AudioUnit -framework AudioToolbox -framework CoreAudio -framework OpenAL -m64 -framework QTKit
build system: SCons%%%

%%%oh forgot to add , Built using customised scons and gcc 4.6.1. Blender: **** version 2.60 (sub 5), revision 42198M. Release build date: 2011-11-28, 10:52:15 platform: Darwin:64bit build cflags: -DPARALLEL=1 -DWITH_QUICKTIME -DUSE_QTKIT -DPARALLEL=1 -isysroot /Developer/SDKs/MacOSX10.6.sdk -mmacosx-version-min=10.6 -pipe -funsigned-char -fopenmp -DNDEBUG -O2 -ftree-vectorize -msse -msse2 -msse3 -mfpmath=sse -march=core2 -mssse3 -enable-threads -m64 -DGHOST_COCOA -DUSE_QTKIT -DWITH_MOD_FLUID -DWITH_MOD_OCEANSIM -D__LITTLE_ENDIAN__ -DWITH_AUDASPACE build cxxflags: -isysroot /Developer/SDKs/MacOSX10.6.sdk -mmacosx-version-min=10.6 -pipe -funsigned-char -fopenmp -isysroot /Developer/SDKs/MacOSX10.6.sdk -mmacosx-version-min=10.6 -DNDEBUG -O2 -ftree-vectorize -msse -msse2 -msse3 -mfpmath=sse -march=core2 -mssse3 -enable-threads -m64 -DGHOST_COCOA -DUSE_QTKIT -DWITH_MOD_FLUID -DWITH_MOD_OCEANSIM -D__LITTLE_ENDIAN__ -DWITH_AUDASPACE build linkflags: -mmacosx-version-min=10.6 -Wl -isysroot /Developer/SDKs/MacOSX10.6.sdk -fexceptions -framework CoreServices -framework Foundation -framework IOKit -framework AppKit -framework Cocoa -framework Carbon -framework AudioUnit -framework AudioToolbox -framework CoreAudio -framework OpenAL -m64 -framework QTKit build system: SCons%%%
Author

%%%The reversal of the Axes display mode can simply be fixed by using the attached diff. However I'm not sure if the allover scaling effect was what was desired.


- source/blender/editors/space_view3d/drawobject.c	(revision 42206)

+++ source/blender/editors/space_view3d/drawobject.c (working copy)
@@ -3990,7 +3990,7 @@
case PART_DRAW_CROSS:
case PART_DRAW_AXIS:
/* lets calculate the scale: */

  • pixsize= ED_view3d_pixel_size(rv3d, ob->obmat[3]);
  •   	pixsize= fabs(ED_view3d_pixel_size(rv3d, ob->obmat[3]));
    
      	if(part->draw_size==0.0)
      		pixsize *= 2.0f;
    

%%%

%%%The reversal of the Axes display mode can simply be fixed by using the attached diff. However I'm not sure if the allover scaling effect was what was desired. **** - source/blender/editors/space_view3d/drawobject.c (revision 42206) +++ source/blender/editors/space_view3d/drawobject.c (working copy) @@ -3990,7 +3990,7 @@ case PART_DRAW_CROSS: case PART_DRAW_AXIS: /* lets calculate the scale: */ - pixsize= ED_view3d_pixel_size(rv3d, ob->obmat[3]); + pixsize= fabs(ED_view3d_pixel_size(rv3d, ob->obmat[3])); if(part->draw_size==0.0) pixsize *= 2.0f; %%%

%%%The scaling can't be intentional, it should stay a roughly fixed size in pixels as you zoom in/out. I think perhaps it should be passing the particle position rather than the object position to ED_view3d_pixel_size, otherwise this size isn't going to be very accurate when you zoom into a part of the object.%%%

%%%The scaling can't be intentional, it should stay a roughly fixed size in pixels as you zoom in/out. I think perhaps it should be passing the particle position rather than the object position to ED_view3d_pixel_size, otherwise this size isn't going to be very accurate when you zoom into a part of the object.%%%
Author

%%%Brecht : OK, so definitely that scaling effect is not wanted. At that point in the code the calculation uses the object that is emitting the particles for the size calculation I suspect to avoid doing that call for every particle later in the code when the vertex arrays are generated. Will try to understand a little more on what is going on and why this effect only shows up when the Size/Vel/Heath/Num boxes are checked.%%%

%%%Brecht : OK, so definitely that scaling effect is not wanted. At that point in the code the calculation uses the object that is emitting the particles for the size calculation I suspect to avoid doing that call for every particle later in the code when the vertex arrays are generated. Will try to understand a little more on what is going on and why this effect only shows up when the Size/Vel/Heath/Num boxes are checked.%%%

%%%Campbell fixed this in svn, didn't close report, closing now.%%%

%%%Campbell fixed this in svn, didn't close report, closing now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29433
No description provided.